@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/form/field[@name='sepa_receivable_flavor']" position="after">
+        <label name="split_sepa_messages_by_sequence_type"/>
+        <field name="split_sepa_messages_by_sequence_type"/>
+        <newline/>
         <label name="last_sepa_receivable_payment_creation_date"/>
         <field name="last_sepa_receivable_payment_creation_date"/>
     </xpath>
